--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git and Github</title>
 
-    <p> hello ! this is my second day of git and github workshop.Thank you !</p></head>
+    <p> hello ! this is my second day of git and github workshop.Thank you !</p>
+    <p>You are a good person</p>
+    <form>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname">
+</form>
+
+    
+</head>
 <body>
     
 </body>
