--- a/index.html
+++ b/index.html
@@ -12,11 +12,37 @@
   <input type="text" id="fname" name="fname"><br>
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname">
+
 </form>
 
+
+<table>
+        <caption>Student Grades</caption>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Subject</th>
+                <th>Grade</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>John Doe</td>
+                <td>Math</td>
+                <td>A</td>
+            </tr>
+            <tr>
+                <td>Jane Smith</td>
+                <td>Science</td>
+                <td>B+</td>
+            </tr>
+            <tr>
+                <td>Sam Wilson</td>
+                <td>History</td>
+                <td>A-</td>
+            </tr>
+        </tbody>
+    </table>
     
 </head>
-<body>
-    
-</body>
 </html>
